 - testfiles/07-html-cgi_html.out    was: 02_html.out
 - testfiles/08-tex		     was: 03
 - testfiles/09-text		     was: 05
 - testfiles/10-tex		     was: 06
 - testfiles/11-make		     was: 07
 - testfiles/12-make		     was: 08
 - testfiles/13-html		     was: 09
 - testfiles/14-text		     was: 02
 - testfiles/15-text                 was: 3
 - testfiles/16-rmHook               was: 4
 - started work on separate treatment of output delimiters:
   * to define as a new style variable OutDelimiters, and
   * to introduce number, e.g., //1+ .. //1- if the output
     contains //+ string, or similarly //2+ etc.

1.31 13 Jun 2020
 - documentation improvements
 - new simple testcases in Java: 02, 03, 04, 05
 - change in Java escape suffix to reduce empty line
 - adding //<? Java prefix hook
 - test output improvement, moving test case 01->06-addHook

1.30 24 Apr 2020
 - documentation improvements
 - README first line generation made better using a final routine
 - make $Star available in the final routines
 - adapted test 35 to test for $Star
 - added to be used for make: make_add_dirs_to_generate_if_needed,
   make_gen_dirs_to_generate, and @DirGenerateIfNeeded
 - revised read_records function

1.29 14 Sep 2019
 - documentation improvements
 - fixed test 35 (missing test file)

1.28 14 Sep 2019
 - documentation improvements
 - replaced `pwd` with getcwd() in testing to avoid errors in different
   operating systems (Windows)

1.27 14 Sep 2019
 - documentation improvements
 - changed final routine into an array of routines
 - intoduce method add_final to add a final routine

1.26 13 Sep 2019
 - documentation improvements
 - .sf extension added as equivalent to .html.sfish with emphasis to be
   used for cgi/php style
 - added <?sf ... !> hook to sf style
 - added $Starf->{Final} routine

1.25 15 Apr 2019
 - documentation improvements

1.24 4 Feb 2017
 - fixed a bug in scan - added sfish_ignore_outer feature

1.23 4 Feb 2017
 - documentation improvements