@@ -1,10 +1,7 @@
 # A simple example... running starfish on the following file...
 #     # SLePerl:LastUpdate:April 27, 2001 11:35:14
-#     <? $O= "test" !>
-#+
-test
-#-
-
+#     <? $O= "test" !>#+
+test#-
 line before
 #SLePerlOut
 test
@@ -12,8 +9,5 @@ test
  continue
 
 # <? $test = 'test'; !>
-# <? $O="ver=($ver) test=($test)" !>
-#+
-ver=(testver) test=(test)
-#-
-
+# <? $O="ver=($ver) test=($test)" !>#+
+ver=(testver) test=(test)#-
