@@ -1,0 +1,23 @@
+/**
+   Some Java file.
+*/
+
+//<? $O = defined($Release) ?
+// "public class p {\n" :
+// "public class p_t {\n";
+//!>//+
+public class p_t {
+//-
+
+  public static int main(String[] args) {
+
+    //<? $O = "    ".(defined $Release ?
+    //qq[System.out.println("Test version");] :
+    //qq[System.out.println("Release version";]);
+    //!>//+
+    System.out.println("Release version";//-
+
+    return 0;
+  }
+}
+
