@@ -35,8 +35,14 @@
 16-rmHook:     default mode with hook removal (rmHook)
                files: 16-rmHook.in 16-rmHook.out
 	       renamed 4 (4.in 4.out)
+17-A_java:     a more complex Java example
+	       files: 17-A_java.in 17-A_java.out
+18-p_t_java:   another simple Java test to be used in tandem with the
+	       next one.  files: 18-p_t_java.in 18-p_t_java.out
+	       renamed: 17 with p_t.java and 17.out
 
 NEEDS RENAMING AND DOC UPDATES:
+18 - simple example with p_t.java
 6 - using -o option, very similar to 10-tex (6.in 6.out)
 8 - test of some functions getmakefilelist (8.in 8.out)
 9 - working with macros, with -o option (9_java.in 9_java.out)
@@ -50,13 +56,10 @@ ok 23 - (Skip under Windows) testing -mode= option
 
 16 - testing .tex file (tex style, after init config)
 
-17,18 - simple example with p_t.java
-
 19,20 - testing html -> html, file permissions: if the output file is
     specified and mode is not given, it should not be changed.
 
 21 - HTML example 2
-
 22 - HTML example 3
 
 25 - Makefile example
